examples/positive/L4/record.ob
MODULE Record;

TYPE RecordTest = RECORD
       foo: INTEGER;
       bar: BOOLEAN
     END;

VAR r: RecordTest;

BEGIN
  r.foo := 42;
  r.bar := TRUE;
  Write(r.foo); WriteLn
END Record.
