examples/negative/type_errors/L1/10_lt_bool_int.ob
MODULE LtBoolInt;

VAR b: BOOLEAN;
    i: INTEGER;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  b := TRUE;
  i := 42;
  b := b < i; ok := TRUE;
END LtBoolInt.
